# ==================================================
# The new, standardized `pyproject.toml`.
#
# Maintainer:
#   KevInZhao <hellozhaowenkai@gmail.com>
# Description:
#   A new configuration file is introduced for software packages to use to specify their build dependencies
#   (with the expectation that the same configuration file will be used for future configuration details).
# Note:
#   Tools MUST specify fields defined by PEP 621 in a table named [project]. No tools may add fields
#   to this table which are not defined by this PEP or subsequent PEPs. For tools wishing to store
#   their own settings in pyproject.toml, they may use the [tool] table as defined in PEP 518. The
#   lack of a [project] table implicitly means the build back-end will dynamically provide all fields.
# Sections:
#   - project
#   - build-system
#   - install-system
#   - tool.black
#   - tool.poetry
# Repository:
#   - [DotPub](https://github.com/hellozhaowenkai/dotpub/)
# References:
#   - [PEP 518](https://www.python.org/dev/peps/pep-0518/)
#   - [PEP 621](https://www.python.org/dev/peps/pep-0621/)
#   - [PEP 650](https://www.python.org/dev/peps/pep-0650/)
# ==================================================


#
# The `project` table is used to store project's core metadata.
#

[project]
name = "DotPub"
version = "1.3.3"
description = "Serve fruity dotfiles for Homebrew formulae to everyone in the DotPub!"
maintainers = [{name = "KevInZhao", email = "hellozhaowenkai@gmail.com"}]

keywords = ["dotfiles", "homebrew", "vimrc", "zshrc"]
classifiers = ["Environment :: Console", "Intended Audience :: Developers"]
readme = "README.md"

requires-python = ">=3.9"
dependencies = []

[project.urls]
repository = "https://github.com/hellozhaowenkai/dotpub/"

[project.license]
text = "GNU Affero General Public License, Version 3.0"
file = "LICENSE"

[project.entry-points]
run = "publican:main"
debug = "waiter:main"

#
# The `build-system` table is used to store build-related data.
#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#
# The `install-system` table is used to store install-system relevant data and information.
#

[install-system]
requires = ["poetry"]
install-backend = "poetry.console:main"

#
# [Black](https://black.readthedocs.io/)
#

[tool.black]
line-length = 88

#
# [Poetry](https://python-poetry.org/)
#

[[tool.poetry.source]]
default = true
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
