# ==================================================
# The new, standardized `pyproject.toml`.
#
# Maintainer:
#   KevInZhao <hellozhaowenkai@gmail.com>
# Description:
#   A new configuration file is introduced for software packages to use to specify their build dependencies
#   (with the expectation that the same configuration file will be used for future configuration details).
# Note:
#   Tools MUST specify fields defined by PEP 621 in a table named [project]. No tools may add fields
#   to this table which are not defined by this PEP or subsequent PEPs. For tools wishing to store
#   their own settings in pyproject.toml, they may use the [tool] table as defined in PEP 518. The
#   lack of a [project] table implicitly means the build back-end will dynamically provide all fields.
# Sections:
#   - project
#   - build-system
#   - install-system
#   - tool.poetry
#   - tool.black
# Repository:
#   - [DotPub](https://github.com/hellozhaowenkai/dotpub/)
# References:
#   - [PEP 518](https://www.python.org/dev/peps/pep-0518/)
#   - [PEP 621](https://www.python.org/dev/peps/pep-0621/)
#   - [PEP 650](https://www.python.org/dev/peps/pep-0650/)
# ==================================================


#
# The `project` table is used to store project's core metadata.
#

[project]
dynamic = []

#
# The `build-system` table is used to store build-related data.
#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#
# The `install-system` table is used to store install-system relevant data and information.
#

[install-system]
requires = ["poetry"]
install-backend = "poetry.console:run"

#
# The `tool` table is where any tool related to your Python project, not just build tools.
#

[tool]

#
# [Poetry](https://python-poetry.org/)
#

# [Configurations](https://python-poetry.org/docs/pyproject/)
[tool.poetry]
name = "DotPub"
version = "1.3.8"
description = "Serve fruity dotfiles for brew fans!"

license = "AGPL-3.0-or-later"
authors = ["KevInZhao <hellozhaowenkai@gmail.com>"]
maintainers = ["KevInZhao <hellozhaowenkai@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/hellozhaowenkai/dotpub/"
repository = "https://github.com/hellozhaowenkai/dotpub/"
documentation = "https://github.com/hellozhaowenkai/dotpub/"
keywords = ["dotfiles", "homebrew", "vimrc", "zshrc"]
classifiers = ["Environment :: Console", "Intended Audience :: Developers"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[[tool.poetry.source]]
default = true
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.poetry.scripts]
run = "publican:main"
debug = "waiter:main"

[tool.poetry.urls]
"bug-tracker" = "https://github.com/hellozhaowenkai/dotpub/issues/"

#
# [Black](https://black.readthedocs.io/)
#

# [Configurations](https://black.readthedocs.io/en/stable/compatible_configs.html)
[tool.black]
